# cplusplus

./: .clang-format  .clang-tidy  CMakeLists.txt  LINTING.md  README.md  VSCODE_LINTING_SETUP.md  a.out  lint.sh  main.cpp
